style: use Stream.toList() in getAvailableCategories endpoint